# rasp-windgram

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.modern  Gruntfile.js  LICENSE.wrf  README.md  docker-run.sh  docker_run_notes.md  drjack-rasp-sources.md  entrypoint.sh  modernization_plan.md  package-lock.json  package.json  pyproject.toml  requirements-cube.txt  setup_geog.sh  soaring-implementation-review.md  windgram_pipeline.md
.github/workflows/: build-images.yml  ci.yml
docker/: Dockerfile.windgram  Dockerfile.wrf
docs/: adding_windgram.md  architecture.md  create_installation_package.md  installation.md  modernization_plan.md  ncl-rewrite-plan.md  productionization.md  site_operation.md
examples/: cascades-fine.yaml  cascades-gfs.yaml  cascades-hrrr-d01.yaml  cascades-hrrr.yaml  cascades.yaml  issaquah-sites.csv  pnw-sites.csv
model/: copy_links.sh  create_install_tar.sh
model/INSTALL/UTIL/: check_basedir.sh  check_dependencies.sh  config_access.sh  copy_files.sh  copy_ncl_libs.sh  copy_run_config.sh  create_cron_job.sh  create_rasp_env.sh  extract_files.sh  fix_basedir.sh  gen_locale.sh  mount_windows_share.sh  output_util.sh  select_ncl_lib.sh  setup_domains.sh
model/RASP/DOWNLOAD/: README.rasp_region.panoche  README.rasp_scripts  README.wrf_execs  download.creation.timestamp.drjack_utils  download.creation.timestamp.rasp_ncl  download.creation.timestamp.wrfsi_gui
model/RASP/RUN/: rasp2.pl  run.rasp
model/RASP/UTIL/: extract.blipspot.PL  plot.datafile.PL  plot.wrfoutfilePDT.PL  plot.wrfoutfilePST.PL
model/UTIL/: date2jdate  jdate2date  ncgm2png
model/WRF/NCL/: blipmap.ncl  blipmap_jack.ncl  ncl_jack_fortran.f  ncl_license.txt  rasp.ncl.region.data  rasp.ncl.region.data.TEMPLATE  rasp.site_load.allmaps.ncl  rasp.site_load.allmaps.ncl.TEMPLATE  rasp.site_load.bl-xsection.ncl.TEMPLATE  rasp.site_load.bparam_resources.ncl  rasp.site_load.contour-parameter.ncl  rasp.site_load.initialization.ncl  rasp.site_load.initialization.ncl.TEMPLATE  rasp.site_load.loop-init.ncl  rasp.site_load.loop-init.ncl.TEMPLATE  rasp.site_load.loop-top.ncl  rasp.site_load.loop-top.ncl.TEMPLATE  rasp.site_load.pressure-level.ncl  rasp.site_load.topo.ncl  rasp.site_load.topo.ncl.TEMPLATE  rasp.wind_calc.ncl  sleep4data.ncl  wrf_plot.ncl  wrf_user_mass.ncl
model/WRF/UTIL/: create_directory.wrf_window.pl
model/WRF/WPS/: namelist.input.PNW  namelist.wps.PNW  run_real_wrf.sh  run_wps.sh
model/WXTOFLY/BLIPSPOT/: blipfooter.html  blipspot_to_json.sh  get_blipspots.sh
model/WXTOFLY/CONFIG/: get_sites_csv.sh  run.conf  sites.csv  sites.json  update_run_conf.sh  update_sites_csv.sh
model/WXTOFLY/CRON/: crontest.sh  setup_cron_job.sh  wxtofly.cron
model/WXTOFLY/CROP/: crop.sh  crop_bj.sh  crop_blan.sh  crop_dog.sh  crop_fraser.sh  crop_ok.sh  crop_sanjuan.sh  crop_tiger.sh
model/WXTOFLY/DOCS/: RunParametersDescription.html
model/WXTOFLY/RUN/: run_check_disk.sh  run_cron_job.sh  run_pnw_d2.sh  (+9 more)
ps/: Create-SitesJSON.ps1  Upload-File.ps1  Upload-Sites.ps1
py/: create_sites_json.py  upload-website.py
rasp/: __init__.py  cli.py  export_cube.py  hrrr_reader.py  namelist_generator.py  pipeline.py  soaring.py  windgram.py
scripts/: build-images.sh  entrypoint.sh  get_nam_grib.sh  run_real_wrf.sh  run_wps.sh
templates/: namelist.wps.PNW
vm/: all_links.tgz  create_curr+n.sh  fix_links.sh  show_colors.sh  update_wxtofly.sh
vm/INSTALL/: install_wxtofly.sh
vm/UTIL/: ncgm2gif
vm/WXTOFLY/: wxtofly.env
vtables/: Vtable.HRRR.full
wwwroot/install/: index.html
wwwroot/scripts/: analytics.js  wxtofly.js
wwwroot/status/: sites.csv
wwwroot/v2/: blipspot.html  contribute.html  explorer.html  index.html  install.html  status.html  windgrams.html
(+477 files in other folders)
