[project]
name = "rasp-windgram"
version = "0.4.8"
description = "Soaring forecast windgram renderer for WRF output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "James Willis" },
]
keywords = ["paragliding", "soaring", "weather", "WRF", "windgram", "forecast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
    "netCDF4>=1.5",
    "scipy>=1.7",
    "eccodes>=1.4",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
# V2 soaring-cube exporter (rasp.export_cube). Needs Python >= 3.11 (Zarr v3);
# installed in the windgram image now that it's on ubuntu 24.04 / py3.12.
cube = ["zarr>=3", "numcodecs", "pyproj"]

[project.scripts]
rasp = "rasp.cli:main"
rasp-windgram = "rasp.windgram:main"
rasp-namelist = "rasp.namelist_generator:main"

[project.urls]
Homepage = "https://github.com/nw-paragliding/raspnw-v2"
Issues = "https://github.com/nw-paragliding/raspnw-v2/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rasp"]

